I have made a new game and redo feature with the use of buttons. Also, I have made a tally of the user's attempts while playing a round of the game, and their score which tracks how many matches they made within a game. Lastly, I have made a message that pops up when the user completed all the matches.
All the features I added are in the div with the class of extra on the HTML page of video-11.

The New Game and Redo
buttons work by calling the newGame or redo functions respectively. In scripts.js for video-11 the newGame function shuffles the cards and then calls the redo function which resets all variables and turns over the cards using a for loop.

In the function score, the scoreNum variable increases each time the function is called and outputs the score along with a message. Also, if the score becomes equivalent to 6 (the number of matches possible) the function outputs a congratulatory message.

In the attempts function, each time it is called the attemptsNum variable increases and the new value gets outputted along with a message.

--- a/video-11/styles.css
+++ b/video-11/styles.css
@@ -10,6 +10,10 @@ body {
   background: #060AB2;
 }
 
+#score{
+  font-size: 25px;
+}
+
 .memory-game {
   width: 640px;
   height: 640px;
@@ -52,4 +56,34 @@ body {
 
 .front-face {
   transform: rotateY(180deg);
+}
+
+.extra{
+  color:#f4f4f4;
+  font-size:25px;
+  padding-top:calc(25% - 30px);
+  padding-left:40px;
+}
+
+.button{
+  background-color: #b1b32c;
+  border-width:1px;
+  border-color: grey;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: #ffffff;
+  color: black;
+}
+
+button:focus{
+  outline: none;
 }
